--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq06l5RUVfib62IYRQacLc-KAy0XIWAVs"></script>
   </head>
   <body>
+    <nav class="navbar fixed-top navbar-light bg-faded" data-reactid=".0.0">
+      <h1 class="navbar-brand mb-0" data-reactid=".0.0.0">&lt;Ryan's Blog/&gt;</h1>
+    </nav>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
